chore: set jvmArgs for google-java-format invocation